itemVM cancel edit

--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -19,5 +19,6 @@
     <div data-bind="with: item">
     <input id="product_name" data-bind="value: name">
     </div>
-    <button id="product_save" type="submit" data-bind="click: update">save</button>
+    <button id="product_save" type="submit" data-bind="click: save">save</button>
+    <button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>
 </form>
