tags add and remove

--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -25,7 +25,7 @@
     Edit!
     <div data-bind="with: item">
     <input id="product_name" data-bind="value: name">
-    <input id="product_tags" data-bind="tags: Tags, tagsOpts: {url: '/Tags'}">
+    <input id="product_tags" data-bind="tags: Tags">
     </div>
     <!--<button id="product_save" type="submit" data-bind="click: save">save</button>-->
     <!--<button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>-->
