--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -27,6 +27,6 @@
     <input id="product_name" data-bind="value: name">
     <input id="product_tags" data-bind="tags: Tags">
     </div>
-    <!--<button id="product_save" type="submit" data-bind="click: save">save</button>-->
-    <!--<button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>-->
+    <button id="product_save" type="submit" data-bind="click: save">save</button>
+    <button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>
 </form>
