--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -9,6 +9,9 @@
             <td data-bind="template: {name: 'tagTemplate', foreach: Tags}"></td>
             <!-- ko if: $data.hasOwnProperty("comp") -->
                 <td data-bind="text: comp"></td>
+                <!-- ko with : Producer -->
+                    <td data-bind="text: name"></td>
+                <!-- /ko -->
             <!-- /ko -->
         <!-- /ko -->
     </tr>
@@ -26,6 +29,7 @@
     <div data-bind="with: item">
     <input id="product_name" data-bind="value: name">
     <input id="product_tags" data-bind="tags: Tags">
+    <input id="product_producer" data-bind="autocomplete: Producer">
     </div>
     <button id="product_save" type="submit" data-bind="click: save">save</button>
     <button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>
