--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -29,7 +29,7 @@
     <div data-bind="with: item">
     <input id="product_name" data-bind="value: name">
     <input id="product_tags" data-bind="tags: Tags">
-    <input id="product_producer" data-bind="autocomplete: Producer">
+    <input id="product_producer" data-bind="autocomplete: Producer, autocompleteOpts : {modelType : 'Producer'}">
     </div>
     <button id="product_save" type="submit" data-bind="click: save">save</button>
     <button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>
