--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -1,5 +1,4 @@
-<span>_index</span>
-<table id="model_container" data-bind="template: {name:'productTemplate', foreach: list}">
+<table id="model_container" class="table table-striped" data-bind="template: {name:'productTemplate', foreach: list}">
 </table>
 <script type="text/x-jquery-tmpl" id="productTemplate">
     <tr data-bind="click: $root.edit">
@@ -7,30 +6,45 @@
             <td data-bind="text: id"></td>
             <td data-bind="text: name"></td>
             <td data-bind="template: {name: 'tagTemplate', foreach: Tags}"></td>
-            <!-- ko if: $data.hasOwnProperty("comp") -->
-                <td data-bind="text: comp"></td>
-                <!-- ko with : Producer -->
-                    <td data-bind="text: name"></td>
-                <!-- /ko -->
+            <td data-bind="text: comp"></td>
+            <!-- ko with : Producer -->
+            <td data-bind="text: name"></td>
             <!-- /ko -->
         <!-- /ko -->
     </tr>
 </script>
 <script type="text/x-jquery-tmpl" id="tagTemplate">
     <span data-bind="text:name"></span>
-    <!-- ko if: $data.hasOwnProperty("shortName") -->
     <span data-bind="text: shortName"></span>
-    <!-- /ko -->
 </script>
 
 <!-- edit form -->
-<form data-form-model-type="Product" data-form-type="edit" style="display: none;" data-bind="with: active">
-    Edit!
-    <div data-bind="with: item">
-    <input id="product_name" data-bind="value: name">
-    <input id="product_tags" data-bind="tags: Tags">
-    <input id="product_producer" data-bind="autocomplete: Producer, autocompleteOpts : {modelType : 'Producer'}">
-    </div>
-    <button id="product_save" type="submit" data-bind="click: save">save</button>
-    <button id="product_cancel" type="submit" data-bind="click: cancel">cancel</button>
+<form class="form-horizontal" data-form-model-type="Product" data-form-type="edit" style="display: none;" data-bind="with: active">
+    <fieldset>
+        <legend>Edit product</legend>
+        <!-- ko with: item -->
+        <div class="control-group">
+            <label class="control-label" for="product_name">Name</label>
+            <div class="controls">
+                <input id="product_name" data-bind="value: name">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="product_tags">Tags</label>
+            <div class="controls">
+                <input id="product_tags" data-bind="tags: Tags">
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="product_producer">Producer</label>
+            <div class="controls">
+                <input id="product_producer" data-bind="autocomplete: Producer, autocompleteOpts : {modelType : 'Producer'}">
+            </div>
+        </div>
+        <!-- /ko -->
+        <div class="form-actions">
+            <button id="product_save" type="submit" class="btn btn-primary" data-bind="click: save">Save changes</button>
+            <button class="btn" data-bind="click: cancel">Cancel</button>
+        </div>
+    </fieldset>
 </form>
