item edit action + view

--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -2,6 +2,7 @@
 </table>
 <script type="text/x-jquery-tmpl" id="productTemplate">
     <tr data-bind="click: $root.edit">
+            <td data-bind="click: $root.detail" ><i class="icon-pencil" data-event-handler="detail"></i></td>
         <!-- ko with: item -->
             <td data-bind="text: id"></td>
             <td data-bind="text: name"></td>
@@ -14,7 +15,7 @@
     </tr>
 </script>
 <script type="text/x-jquery-tmpl" id="tagTemplate">
-    <span data-bind="text:name"></span>
+    <span data-bind="text: name"></span>
     <span data-bind="text: shortName"></span>
 </script>
 
