--- a/Views/Shared/_layout.html
+++ b/Views/Shared/_layout.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span3">
-            <div class="well sidebar-nav" data-partial-view="Views/Shared/_IndexToolbox">
+            <div class="well sidebar-nav" data-partial-view="Views/Shared/_IndexToolbox" data-bind="with: $root.zones.toolbox">
             </div><!--/.well -->
         </div><!--/span-->
         <div class="span9">
