--- a/Views/Shared/_IndexToolbox.html
+++ b/Views/Shared/_IndexToolbox.html
@@ -1,4 +1,11 @@
 <ul class="nav nav-list">
+    <li class="nav-header">Create new</li>
+    <li>
+    <div class="btn-group">
+    <button class="btn" data-bind="click: createProduct">Product</button>
+    <button class="btn">Producer</button>
+    </div>
+    </li>
     <li class="nav-header">Sidebar</li>
     <li class="active"><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
