--- a/Views/Shared/_IndexToolbox.html
+++ b/Views/Shared/_IndexToolbox.html
@@ -23,3 +23,6 @@
     <li><a href="#">Link</a></li>
     <li><a href="#">Link</a></li>
 </ul>
+<div data-partial-view="Shared/_ProductForm" data-bind="with: newProduct"
+     data-partial-view-bag="{caption: 'Create product', type : 'create'}">
+</div>
