--- a/Views/Shared/_ProductForm.html
+++ b/Views/Shared/_ProductForm.html
@@ -1,7 +1,7 @@
 <!-- edit form -->
-<form class="form-horizontal" data-form-model-type="Product" data-form-type="edit" style="display: none;">
+<form class="form-horizontal" data-form-model-type="Product" data-form-type="{{:type}}" style="display: none;">
     <fieldset>
-        <legend>Edit product</legend>
+        <legend>{{:caption}}</legend>
         <!-- ko with: item -->
         <div class="control-group">
             <label class="control-label" for="product_name">Name</label>
