--- a/Views/Shared/_ProductForm.html
+++ b/Views/Shared/_ProductForm.html
@@ -1,30 +1,37 @@
 <!-- edit form -->
-<form class="form-horizontal" data-form-model-type="Product" data-form-type="{{:type}}" style="display: none;">
-    <fieldset>
-        <legend>{{:caption}}</legend>
-        <!-- ko with: item -->
-        <div class="control-group">
-            <label class="control-label" for="product_name">Name</label>
-            <div class="controls">
-                <input id="product_name" data-bind="value: name">
+<div class="modal" data-form-model-type="Product" data-form-type="{{:type}}" style="display: none;">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">×</a>
+        <h3>{{:caption}}</h3>
+    </div>
+    <div class="modal-body">
+        <form class="well">
+            <!-- ko with: item -->
+            <div class="control-group">
+                <label class="control-label" for="product_name">Name</label>
+                <div class="controls">
+                    <input id="product_name" data-bind="value: name">
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="product_tags">Tags</label>
-            <div class="controls">
-                <input id="product_tags" data-bind="tags: Tags">
+            <div class="control-group">
+                <label class="control-label" for="product_tags">Tags</label>
+                <div class="controls">
+                    <input id="product_tags" data-bind="tags: Tags">
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="product_producer">Producer</label>
-            <div class="controls">
-                <input id="product_producer" data-bind="autocomplete: Producer, autocompleteOpts : {modelType : 'Producer'}">
+            <div class="control-group">
+                <label class="control-label" for="product_producer">Producer</label>
+                <div class="controls">
+                    <input id="product_producer" data-bind="autocomplete: Producer, autocompleteOpts : {modelType : 'Producer'}">
+                </div>
             </div>
-        </div>
-        <!-- /ko -->
+            <!-- /ko -->
+        </form>
+    </div>
+    <div class="modal-footer">
         <div class="form-actions">
             <button id="product_save" type="submit" class="btn btn-primary" data-bind="click: save">Save changes</button>
             <button class="btn" data-bind="click: cancel">Cancel</button>
         </div>
-    </fieldset>
-</form>
+    </div>
+</div>
