--- a/Views/Product/Index.html
+++ b/Views/Product/Index.html
@@ -6,6 +6,7 @@
 <script type="text/x-jquery-tmpl" id="productTemplate">
     <tr data-bind="click: $root.edit">
             <td data-bind="click: $root.detail" ><i class="icon-pencil" data-event-handler="detail"></i></td>
+            <td data-bind="click: $root.remove" ><i class="icon-remove" data-event-handler="remove"></i></td>
         <!-- ko with: item -->
             <td data-bind="text: id"></td>
             <td data-bind="text: name"></td>
