--- a/Views/Producer/Item.html
+++ b/Views/Producer/Item.html
@@ -17,9 +17,7 @@
     </fieldset>
 </form>
 <!-- ko with: item -->
-<!--
-<table id="model_container" class="table table-striped" data-bind="template: {name:'productTemplate', foreach: Products}">
+<table id="model_container" class="table table-striped" data-bind="template: {name:'productTemplate', foreach: ProductsVM.list}">
 </table>
--->
 <!-- /ko -->
 <div data-partial-view="Product/_productTemplate"/>
