--- a/Views/Shared/__LayoutItem.html
+++ b/Views/Shared/__LayoutItem.html
@@ -1,10 +1,14 @@
 <div class="container-fluid">
     <div class="row-fluid">
-        <div class="span12">
+        <div class="span9">
             <div class="hero-unit">
                 <div id="_body">
                 </div>
             </div>
+        </div><!--/span-->
+        <div class="span3">
+            <div class="well sidebar-nav" data-partial-view="Shared/_ItemToolbox" data-bind="with: $root.zones.toolbox">
+            </div><!--/.well -->
         </div><!--/span-->
     </div><!--/row-->
 
