--- a/Views/Shared/_TagTemplate.html
+++ b/Views/Shared/_TagTemplate.html
@@ -1,4 +1,3 @@
 <script type="text/x-jquery-tmpl" id="tagTemplate">
-    <span data-bind="text: name"></span>
-    <span data-bind="text: shortName"></span>
+    <span class="badge badge-warning" data-bind="text: shortName, tooltip: name"></span>
 </script>
